Phase_5/New folder/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OP_negate

Grammar

Rule 0     S' -> statement_list
Rule 1     statement -> compound_statement
Rule 2     statement -> declaration_statement
Rule 3     statement -> selection_statement
Rule 4     statement -> iteration_statement
Rule 5     statement -> expression_statement
Rule 6     statement -> print_statement
Rule 7     statement -> SEMICOLON
Rule 8     compound_statement -> LBRACE statement_list RBRACE
Rule 9     statement_list -> statement_list statement
Rule 10    statement_list -> empty
Rule 11    declaration_statement -> type_specifier declaration_list SEMICOLON
Rule 12    type_specifier -> KEY_int
Rule 13    type_specifier -> KEY_char
Rule 14    type_specifier -> KEY_float
Rule 15    type_specifier -> KEY_string
Rule 16    declaration_list -> single_var_declation COMMA declaration_list
Rule 17    declaration_list -> single_var_declation
Rule 18    single_var_declation -> IDENTIFIER
Rule 19    single_var_declation -> IDENTIFIER OP_assign equality_expression
Rule 20    print_statement -> KEY_print LPAREN expression RPAREN SEMICOLON
Rule 21    selection_statement -> KEY_if LPAREN expression save RPAREN statement
Rule 22    selection_statement -> KEY_if LPAREN expression save RPAREN statement KEY_else save statement
Rule 23    iteration_statement -> KEY_while label LPAREN expression save RPAREN statement
Rule 24    iteration_statement -> KEY_do label statement KEY_while LPAREN expression RPAREN SEMICOLON
Rule 25    iteration_statement -> KEY_for LPAREN optexpr label SEMICOLON optexpr save SEMICOLON optexpr RPAREN statement
Rule 26    label -> empty
Rule 27    save -> empty
Rule 28    optexpr -> assignment_expression
Rule 29    optexpr -> empty
Rule 30    expression_statement -> expression SEMICOLON
Rule 31    expression -> assignment_expression
Rule 32    expression -> expression COMMA assignment_expression
Rule 33    assignment_expression -> equality_expression
Rule 34    assignment_expression -> IDENTIFIER OP_assign equality_expression
Rule 35    equality_expression -> relational_expression
Rule 36    equality_expression -> equality_expression OP_equal relational_expression
Rule 37    equality_expression -> equality_expression OP_notequal relational_expression
Rule 38    relational_expression -> additive_expression
Rule 39    relational_expression -> relational_expression OP_greater additive_expression
Rule 40    relational_expression -> relational_expression OP_less additive_expression
Rule 41    relational_expression -> relational_expression OP_greaterequal additive_expression
Rule 42    relational_expression -> relational_expression OP_lessequal additive_expression
Rule 43    additive_expression -> multiplicative_expression
Rule 44    additive_expression -> additive_expression OP_add multiplicative_expression
Rule 45    additive_expression -> additive_expression OP_subtract multiplicative_expression
Rule 46    multiplicative_expression -> unary_expression
Rule 47    multiplicative_expression -> multiplicative_expression OP_multiply unary_expression
Rule 48    multiplicative_expression -> multiplicative_expression OP_divide unary_expression
Rule 49    multiplicative_expression -> multiplicative_expression OP_mod unary_expression
Rule 50    unary_expression -> primary_expression
Rule 51    unary_expression -> OP_subtract primary_expression
Rule 52    primary_expression -> INTEGER
Rule 53    primary_expression -> FLOAT
Rule 54    primary_expression -> CHARACTER
Rule 55    primary_expression -> STRING
Rule 56    primary_expression -> id_expression
Rule 57    id_expression -> IDENTIFIER
Rule 58    id_expression -> LPAREN expression RPAREN
Rule 59    empty -> <empty>

Terminals, with rules where they appear

CHARACTER            : 54
COMMA                : 16 32
FLOAT                : 53
IDENTIFIER           : 18 19 34 57
INTEGER              : 52
KEY_char             : 13
KEY_do               : 24
KEY_else             : 22
KEY_float            : 14
KEY_for              : 25
KEY_if               : 21 22
KEY_int              : 12
KEY_print            : 20
KEY_string           : 15
KEY_while            : 23 24
LBRACE               : 8
LPAREN               : 20 21 22 23 24 25 58
OP_add               : 44
OP_assign            : 19 34
OP_divide            : 48
OP_equal             : 36
OP_greater           : 39
OP_greaterequal      : 41
OP_less              : 40
OP_lessequal         : 42
OP_mod               : 49
OP_multiply          : 47
OP_negate            : 
OP_notequal          : 37
OP_subtract          : 45 51
RBRACE               : 8
RPAREN               : 20 21 22 23 24 25 58
SEMICOLON            : 7 11 20 24 25 25 30
STRING               : 55
error                : 

Nonterminals, with rules where they appear

additive_expression  : 38 39 40 41 42 44 45
assignment_expression : 28 31 32
compound_statement   : 1
declaration_list     : 11 16
declaration_statement : 2
empty                : 10 26 27 29
equality_expression  : 19 33 34 36 37
expression           : 20 21 22 23 24 30 32 58
expression_statement : 5
id_expression        : 56
iteration_statement  : 4
label                : 23 24 25
multiplicative_expression : 43 44 45 47 48 49
optexpr              : 25 25 25
primary_expression   : 50 51
print_statement      : 6
relational_expression : 35 36 37 39 40 41 42
save                 : 21 22 22 23 25
selection_statement  : 3
single_var_declation : 16 17
statement            : 9 21 22 22 23 24 25
statement_list       : 8 9 0
type_specifier       : 11
unary_expression     : 46 47 48 49

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (9) statement_list -> . statement_list statement
    (10) statement_list -> . empty
    (59) empty -> .

    SEMICOLON       reduce using rule 59 (empty -> .)
    LBRACE          reduce using rule 59 (empty -> .)
    KEY_if          reduce using rule 59 (empty -> .)
    KEY_while       reduce using rule 59 (empty -> .)
    KEY_do          reduce using rule 59 (empty -> .)
    KEY_for         reduce using rule 59 (empty -> .)
    KEY_print       reduce using rule 59 (empty -> .)
    KEY_int         reduce using rule 59 (empty -> .)
    KEY_char        reduce using rule 59 (empty -> .)
    KEY_float       reduce using rule 59 (empty -> .)
    KEY_string      reduce using rule 59 (empty -> .)
    IDENTIFIER      reduce using rule 59 (empty -> .)
    OP_subtract     reduce using rule 59 (empty -> .)
    INTEGER         reduce using rule 59 (empty -> .)
    FLOAT           reduce using rule 59 (empty -> .)
    CHARACTER       reduce using rule 59 (empty -> .)
    STRING          reduce using rule 59 (empty -> .)
    LPAREN          reduce using rule 59 (empty -> .)
    $end            reduce using rule 59 (empty -> .)

    statement_list                 shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> statement_list .
    (9) statement_list -> statement_list . statement
    (1) statement -> . compound_statement
    (2) statement -> . declaration_statement
    (3) statement -> . selection_statement
    (4) statement -> . iteration_statement
    (5) statement -> . expression_statement
    (6) statement -> . print_statement
    (7) statement -> . SEMICOLON
    (8) compound_statement -> . LBRACE statement_list RBRACE
    (11) declaration_statement -> . type_specifier declaration_list SEMICOLON
    (21) selection_statement -> . KEY_if LPAREN expression save RPAREN statement
    (22) selection_statement -> . KEY_if LPAREN expression save RPAREN statement KEY_else save statement
    (23) iteration_statement -> . KEY_while label LPAREN expression save RPAREN statement
    (24) iteration_statement -> . KEY_do label statement KEY_while LPAREN expression RPAREN SEMICOLON
    (25) iteration_statement -> . KEY_for LPAREN optexpr label SEMICOLON optexpr save SEMICOLON optexpr RPAREN statement
    (30) expression_statement -> . expression SEMICOLON
    (20) print_statement -> . KEY_print LPAREN expression RPAREN SEMICOLON
    (12) type_specifier -> . KEY_int
    (13) type_specifier -> . KEY_char
    (14) type_specifier -> . KEY_float
    (15) type_specifier -> . KEY_string
    (31) expression -> . assignment_expression
    (32) expression -> . expression COMMA assignment_expression
    (33) assignment_expression -> . equality_expression
    (34) assignment_expression -> . IDENTIFIER OP_assign equality_expression
    (35) equality_expression -> . relational_expression
    (36) equality_expression -> . equality_expression OP_equal relational_expression
    (37) equality_expression -> . equality_expression OP_notequal relational_expression
    (38) relational_expression -> . additive_expression
    (39) relational_expression -> . relational_expression OP_greater additive_expression
    (40) relational_expression -> . relational_expression OP_less additive_expression
    (41) relational_expression -> . relational_expression OP_greaterequal additive_expression
    (42) relational_expression -> . relational_expression OP_lessequal additive_expression
    (43) additive_expression -> . multiplicative_expression
    (44) additive_expression -> . additive_expression OP_add multiplicative_expression
    (45) additive_expression -> . additive_expression OP_subtract multiplicative_expression
    (46) multiplicative_expression -> . unary_expression
    (47) multiplicative_expression -> . multiplicative_expression OP_multiply unary_expression
    (48) multiplicative_expression -> . multiplicative_expression OP_divide unary_expression
    (49) multiplicative_expression -> . multiplicative_expression OP_mod unary_expression
    (50) unary_expression -> . primary_expression
    (51) unary_expression -> . OP_subtract primary_expression
    (52) primary_expression -> . INTEGER
    (53) primary_expression -> . FLOAT
    (54) primary_expression -> . CHARACTER
    (55) primary_expression -> . STRING
    (56) primary_expression -> . id_expression
    (57) id_expression -> . IDENTIFIER
    (58) id_expression -> . LPAREN expression RPAREN

    SEMICOLON       shift and go to state 10
    LBRACE          shift and go to state 11
    KEY_if          shift and go to state 13
    KEY_while       shift and go to state 16
    KEY_do          shift and go to state 17
    KEY_for         shift and go to state 18
    KEY_print       shift and go to state 19
    KEY_int         shift and go to state 20
    KEY_char        shift and go to state 21
    KEY_float       shift and go to state 22
    KEY_string      shift and go to state 23
    IDENTIFIER      shift and go to state 26
    OP_subtract     shift and go to state 30
    INTEGER         shift and go to state 33
    FLOAT           shift and go to state 34
    CHARACTER       shift and go to state 35
    STRING          shift and go to state 36
    LPAREN          shift and go to state 14

    statement                      shift and go to state 3
    compound_statement             shift and go to state 4
    declaration_statement          shift and go to state 5
    selection_statement            shift and go to state 6
    iteration_statement            shift and go to state 7
    expression_statement           shift and go to state 8
    print_statement                shift and go to state 9
    type_specifier                 shift and go to state 12
    expression                     shift and go to state 15
    assignment_expression          shift and go to state 24
    equality_expression            shift and go to state 25
    relational_expression          shift and go to state 27
    additive_expression            shift and go to state 28
    multiplicative_expression      shift and go to state 29
    unary_expression               shift and go to state 31
    primary_expression             shift and go to state 32
    id_expression                  shift and go to state 37

state 2

    (10) statement_list -> empty .

    SEMICOLON       reduce using rule 10 (statement_list -> empty .)
    LBRACE          reduce using rule 10 (statement_list -> empty .)
    KEY_if          reduce using rule 10 (statement_list -> empty .)
    KEY_while       reduce using rule 10 (statement_list -> empty .)
    KEY_do          reduce using rule 10 (statement_list -> empty .)
    KEY_for         reduce using rule 10 (statement_list -> empty .)
    KEY_print       reduce using rule 10 (statement_list -> empty .)
    KEY_int         reduce using rule 10 (statement_list -> empty .)
    KEY_char        reduce using rule 10 (statement_list -> empty .)
    KEY_float       reduce using rule 10 (statement_list -> empty .)
    KEY_string      reduce using rule 10 (statement_list -> empty .)
    IDENTIFIER      reduce using rule 10 (statement_list -> empty .)
    OP_subtract     reduce using rule 10 (statement_list -> empty .)
    INTEGER         reduce using rule 10 (statement_list -> empty .)
    FLOAT           reduce using rule 10 (statement_list -> empty .)
    CHARACTER       reduce using rule 10 (statement_list -> empty .)
    STRING          reduce using rule 10 (statement_list -> empty .)
    LPAREN          reduce using rule 10 (statement_list -> empty .)
    $end            reduce using rule 10 (statement_list -> empty .)
    RBRACE          reduce using rule 10 (statement_list -> empty .)


state 3

    (9) statement_list -> statement_list statement .

    SEMICOLON       reduce using rule 9 (statement_list -> statement_list statement .)
    LBRACE          reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_if          reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_while       reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_do          reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_for         reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_print       reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_int         reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_char        reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_float       reduce using rule 9 (statement_list -> statement_list statement .)
    KEY_string      reduce using rule 9 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 9 (statement_list -> statement_list statement .)
    OP_subtract     reduce using rule 9 (statement_list -> statement_list statement .)
    INTEGER         reduce using rule 9 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 9 (statement_list -> statement_list statement .)
    CHARACTER       reduce using rule 9 (statement_list -> statement_list statement .)
    STRING          reduce using rule 9 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 9 (statement_list -> statement_list statement .)
    $end            reduce using rule 9 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 9 (statement_list -> statement_list statement .)


state 4

    (1) statement -> compound_statement .

    SEMICOLON       reduce using rule 1 (statement -> compound_statement .)
    LBRACE          reduce using rule 1 (statement -> compound_statement .)
    KEY_if          reduce using rule 1 (statement -> compound_statement .)
    KEY_while       reduce using rule 1 (statement -> compound_statement .)
    KEY_do          reduce using rule 1 (statement -> compound_statement .)
    KEY_for         reduce using rule 1 (statement -> compound_statement .)
    KEY_print       reduce using rule 1 (statement -> compound_statement .)
    KEY_int         reduce using rule 1 (statement -> compound_statement .)
    KEY_char        reduce using rule 1 (statement -> compound_statement .)
    KEY_float       reduce using rule 1 (statement -> compound_statement .)
    KEY_string      reduce using rule 1 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 1 (statement -> compound_statement .)
    OP_subtract     reduce using rule 1 (statement -> compound_statement .)
    INTEGER         reduce using rule 1 (statement -> compound_statement .)
    FLOAT           reduce using rule 1 (statement -> compound_statement .)
    CHARACTER       reduce using rule 1 (statement -> compound_statement .)
    STRING          reduce using rule 1 (statement -> compound_statement .)
    LPAREN          reduce using rule 1 (statement -> compound_statement .)
    $end            reduce using rule 1 (statement -> compound_statement .)
    RBRACE          reduce using rule 1 (statement -> compound_statement .)
    KEY_else        reduce using rule 1 (statement -> compound_statement .)


state 5

    (2) statement -> declaration_statement .

    SEMICOLON       reduce using rule 2 (statement -> declaration_statement .)
    LBRACE          reduce using rule 2 (statement -> declaration_statement .)
    KEY_if          reduce using rule 2 (statement -> declaration_statement .)
    KEY_while       reduce using rule 2 (statement -> declaration_statement .)
    KEY_do          reduce using rule 2 (statement -> declaration_statement .)
    KEY_for         reduce using rule 2 (statement -> declaration_statement .)
    KEY_print       reduce using rule 2 (statement -> declaration_statement .)
    KEY_int         reduce using rule 2 (statement -> declaration_statement .)
    KEY_char        reduce using rule 2 (statement -> declaration_statement .)
    KEY_float       reduce using rule 2 (statement -> declaration_statement .)
    KEY_string      reduce using rule 2 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 2 (statement -> declaration_statement .)
    OP_subtract     reduce using rule 2 (statement -> declaration_statement .)
    INTEGER         reduce using rule 2 (statement -> declaration_statement .)
    FLOAT           reduce using rule 2 (statement -> declaration_statement .)
    CHARACTER       reduce using rule 2 (statement -> declaration_statement .)
    STRING          reduce using rule 2 (statement -> declaration_statement .)
    LPAREN          reduce using rule 2 (statement -> declaration_statement .)
    $end            reduce using rule 2 (statement -> declaration_statement .)
    RBRACE          reduce using rule 2 (statement -> declaration_statement .)
    KEY_else        reduce using rule 2 (statement -> declaration_statement .)


state 6

    (3) statement -> selection_statement .

    SEMICOLON       reduce using rule 3 (statement -> selection_statement .)
    LBRACE          reduce using rule 3 (statement -> selection_statement .)
    KEY_if          reduce using rule 3 (statement -> selection_statement .)
    KEY_while       reduce using rule 3 (statement -> selection_statement .)
    KEY_do          reduce using rule 3 (statement -> selection_statement .)
    KEY_for         reduce using rule 3 (statement -> selection_statement .)
    KEY_print       reduce using rule 3 (statement -> selection_statement .)
    KEY_int         reduce using rule 3 (statement -> selection_statement .)
    KEY_char        reduce using rule 3 (statement -> selection_statement .)
    KEY_float       reduce using rule 3 (statement -> selection_statement .)
    KEY_string      reduce using rule 3 (statement -> selection_statement .)
    IDENTIFIER      reduce using rule 3 (statement -> selection_statement .)
    OP_subtract     reduce using rule 3 (statement -> selection_statement .)
    INTEGER         reduce using rule 3 (statement -> selection_statement .)
    FLOAT           reduce using rule 3 (statement -> selection_statement .)
    CHARACTER       reduce using rule 3 (statement -> selection_statement .)
    STRING          reduce using rule 3 (statement -> selection_statement .)
    LPAREN          reduce using rule 3 (statement -> selection_statement .)
    $end            reduce using rule 3 (statement -> selection_statement .)
    RBRACE          reduce using rule 3 (statement -> selection_statement .)
    KEY_else        reduce using rule 3 (statement -> selection_statement .)


state 7

    (4) statement -> iteration_statement .

    SEMICOLON       reduce using rule 4 (statement -> iteration_statement .)
    LBRACE          reduce using rule 4 (statement -> iteration_statement .)
    KEY_if          reduce using rule 4 (statement -> iteration_statement .)
    KEY_while       reduce using rule 4 (statement -> iteration_statement .)
    KEY_do          reduce using rule 4 (statement -> iteration_statement .)
    KEY_for         reduce using rule 4 (statement -> iteration_statement .)
    KEY_print       reduce using rule 4 (statement -> iteration_statement .)
    KEY_int         reduce using rule 4 (statement -> iteration_statement .)
    KEY_char        reduce using rule 4 (statement -> iteration_statement .)
    KEY_float       reduce using rule 4 (statement -> iteration_statement .)
    KEY_string      reduce using rule 4 (statement -> iteration_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> iteration_statement .)
    OP_subtract     reduce using rule 4 (statement -> iteration_statement .)
    INTEGER         reduce using rule 4 (statement -> iteration_statement .)
    FLOAT           reduce using rule 4 (statement -> iteration_statement .)
    CHARACTER       reduce using rule 4 (statement -> iteration_statement .)
    STRING          reduce using rule 4 (statement -> iteration_statement .)
    LPAREN          reduce using rule 4 (statement -> iteration_statement .)
    $end            reduce using rule 4 (statement -> iteration_statement .)
    RBRACE          reduce using rule 4 (statement -> iteration_statement .)
    KEY_else        reduce using rule 4 (statement -> iteration_statement .)


state 8

    (5) statement -> expression_statement .

    SEMICOLON       reduce using rule 5 (statement -> expression_statement .)
    LBRACE          reduce using rule 5 (statement -> expression_statement .)
    KEY_if          reduce using rule 5 (statement -> expression_statement .)
    KEY_while       reduce using rule 5 (statement -> expression_statement .)
    KEY_do          reduce using rule 5 (statement -> expression_statement .)
    KEY_for         reduce using rule 5 (statement -> expression_statement .)
    KEY_print       reduce using rule 5 (statement -> expression_statement .)
    KEY_int         reduce using rule 5 (statement -> expression_statement .)
    KEY_char        reduce using rule 5 (statement -> expression_statement .)
    KEY_float       reduce using rule 5 (statement -> expression_statement .)
    KEY_string      reduce using rule 5 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> expression_statement .)
    OP_subtract     reduce using rule 5 (statement -> expression_statement .)
    INTEGER         reduce using rule 5 (statement -> expression_statement .)
    FLOAT           reduce using rule 5 (statement -> expression_statement .)
    CHARACTER       reduce using rule 5 (statement -> expression_statement .)
    STRING          reduce using rule 5 (statement -> expression_statement .)
    LPAREN          reduce using rule 5 (statement -> expression_statement .)
    $end            reduce using rule 5 (statement -> expression_statement .)
    RBRACE          reduce using rule 5 (statement -> expression_statement .)
    KEY_else        reduce using rule 5 (statement -> expression_statement .)


state 9

    (6) statement -> print_statement .

    SEMICOLON       reduce using rule 6 (statement -> print_statement .)
    LBRACE          reduce using rule 6 (statement -> print_statement .)
    KEY_if          reduce using rule 6 (statement -> print_statement .)
    KEY_while       reduce using rule 6 (statement -> print_statement .)
    KEY_do          reduce using rule 6 (statement -> print_statement .)
    KEY_for         reduce using rule 6 (statement -> print_statement .)
    KEY_print       reduce using rule 6 (statement -> print_statement .)
    KEY_int         reduce using rule 6 (statement -> print_statement .)
    KEY_char        reduce using rule 6 (statement -> print_statement .)
    KEY_float       reduce using rule 6 (statement -> print_statement .)
